tests/functional/lang/eval-fail-recursion.err.exp
error:
       … in the right operand of the update (//) operator
         at /pwd/lang/eval-fail-recursion.nix:2:11:
            1| let
            2|   a = { } // a;
             |           ^
            3| in

       error: infinite recursion encountered
       at /pwd/lang/eval-fail-recursion.nix:4:1:
            3| in
            4| a.foo
             | ^
            5|
